--- a/.github/workflows/token.yml
+++ b/.github/workflows/token.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main  # Cambia si usas otra rama
 
 jobs:
   deploy:
@@ -12,11 +12,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.ONE }}  # tu token guardado como secreto
+          token: ${{ secrets.ONE }}  # Tu token personal guardado como secreto
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.ONE }}
           publish_dir: .
-          quiet: true
+          quiet: true  # Oculta detalles largos del log
+
+      - name: Confirmar estado
+        run: |
+          echo "✅ Deploy completado correctamente - Estado: 200 OK"
