--- a/.github/workflows/token.yml
+++ b/.github/workflows/token.yml
@@ -19,4 +19,6 @@ jobs:
         with:
           github_token: ${{ secrets.ONE }}
           publish_dir: .
-          
+
+      - name: Confirmar estado
+        run: echo "✅ Deploy completado correctamente usando el token ONE - Estado: 200 OK"
